--- a/views/student/course/course_main.ejs
+++ b/views/student/course/course_main.ejs
@@ -31,7 +31,7 @@
     <title>Course</title>
 </head>
 
-<body class="quantico-regular" style="background-color: #122c5a;">
+<body class="quantico-regular" style="background-color: #cad19f;">
     <!-- Narbar-->
     <%- include('../layouts/navbar') %>
     
