--- a/views/student/layouts/project-middle.ejs
+++ b/views/student/layouts/project-middle.ejs
@@ -6,8 +6,7 @@
   .projectbox{
     width: 150px;
     height: 200px;
-    background-color: #5994ce;
-    box-shadow: 0 0 10px 5px #38fbdb;
+    background-color: #e2ddc8;
     margin: 10px;
     margin-top: 30px;
     margin-bottom: 40px;
@@ -17,7 +16,7 @@
     text-align: center;
   }
   .projectbox:hover {
-    box-shadow: 0 0 10px 5px #122c5a;
+    box-shadow: 0 0 10px 5px #ffb3fc;
   }
   .quantico-regular {
     font-family: "Quantico", sans-serif;
@@ -47,7 +46,7 @@
 <!--   C Language -->
         <div class="accordion" id="accordionParentSyntax">
             <!--   Introduce -->
-            <div id="collapseIntroduce" class="accordion-collapse show project" style="background-color: #3a4e93; box-shadow: 0 0 15px 5px #38fbdb;" data-bs-parent="#accordionParentSyntax">
+            <div id="collapseIntroduce" class="accordion-collapse show project" style="background-color: #bd7b67; box-shadow: 0 0 15px 5px #38fbdb;" data-bs-parent="#accordionParentSyntax">
                 <h1>Project</h1> <!--
                 <ol class="breadcrumb" style="background-color: #3a4e93;">
                     <li class="breadcrumb-item"><i href="/home" class="fa fa-home" style="font-size:16px"></i></li>
