--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" style="box-shadow: inset 0 0 15px 5px #ff4cbf;">
+<html lang="en">
 
 <head>
     <!-- Required meta tags -->
@@ -26,7 +26,7 @@
             width: 250px;
         }
         h1,h4 {
-            color: #ffffff;
+            color: black;
         }
         table {
             width: 100%;
@@ -58,14 +58,15 @@
     <title>HOME</title>
 </head>
 
-<body class="quantico-regular" style=" background-color: #122c5a; ">
+<body class="quantico-regular" style=" background-color: #cad19f;">
     
     <!-- Narbar-->
     <%- include('../layouts/navbar') %>
     
     <!-- end of Narbar-->
 <!-- LEFT -->
-    <div class="grid-container">
+    <main>
+       
         <br><br>
         <div id="content" class="container"><br>
             <div class="group">
@@ -163,89 +164,87 @@
                 <br>
                 
                 <div class="group">
-                    <div class="boxbax">
-                        <p>Progress</p>
-                        <div class="progress">
-                            <progress class="progress" value="<%= TicketBooking_SystemPercent %>" style="margin-right: 5px;" max="100"></progress>
-                            <b><%= TicketBooking_SystemPercent %>%</b>
-                        </div> 
-                        <b style="font-size: 14px;">ความคืบหน้าในการทำแบบทดสอบเพื่อปลดล็อค Project Quiz</b>
-                        <hr>
-
-                        <img style="width: 20px;" src="https://cdn-icons-png.flaticon.com/512/4213/4213459.png " alt="">
-                        <% if (TicketBooking_SystemPercent === 50) { %>
-                            <b>Project Quiz 1 ปลดล็อกแล้ว!</b>
-                            <p>คลิก<a href="/project"> Project </a>เพื่อดูเพิ่มเติม</p>
-                        <% }%>
-                        <% if (PointofSales_SystemPercent === 75) { %>
-                            <b>Project Quiz 2 ปลดล็อกแล้ว!</b>
-                            <p>คลิก<a href="/project"> Project </a>เพื่อดูเพิ่มเติม</p>
-                        <% }%>
-                        <% if (ProjectQUIZ3Percent === 100) { %>
-                            <b>Project Quiz 3 ปลดล็อกแล้ว!</b>
-                            <p>คลิก<a href="/project"> Project </a>เพื่อดูเพิ่มเติม</p>
-                        <% }%>
-                        <p>Project Quiz 1 : <%= PrjQuiz1Score %></p>
-                        <p>Project Quiz 2 : <%= PrjQuiz2Score %></p>
-                        <p>Project Quiz 3 : <%= PrjQuiz3Score %></p>
+                    <div>
+                        <div class="boxbax">
+                            <p>Progress</p>
+                            <div class="progress">
+                                <progress class="progress" value="<%= TicketBooking_SystemPercent %>" max="100"></progress>
+                            </div> <b><%= TicketBooking_SystemPercent %>%</b>
+                            <b style="font-size: 14px;">ความคืบหน้าในการทำแบบทดสอบเพื่อปลดล็อค Project Quiz</b>
+                            <hr>
+    
+                            <img style="width: 20px;" src="https://cdn-icons-png.flaticon.com/512/4213/4213459.png " alt="">
+                            <% if (TicketBooking_SystemPercent === 50) { %>
+                                <b>Project Quiz 1 ปลดล็อกแล้ว!</b>
+                                <p>คลิก<a href="/project"> Project </a>เพื่อดูเพิ่มเติม</p>
+                            <% }%>
+                            <% if (PointofSales_SystemPercent === 75) { %>
+                                <b>Project Quiz 2 ปลดล็อกแล้ว!</b>
+                                <p>คลิก<a href="/project"> Project </a>เพื่อดูเพิ่มเติม</p>
+                            <% }%>
+                            <% if (ProjectQUIZ3Percent === 100) { %>
+                                <b>Project Quiz 3 ปลดล็อกแล้ว!</b>
+                                <p>คลิก<a href="/project"> Project </a>เพื่อดูเพิ่มเติม</p>
+                            <% }%>
+                            <p>Project Quiz 1 : <%= PrjQuiz1Score %></p>
+                            <p>Project Quiz 2 : <%= PrjQuiz2Score %></p>
+                            <p>Project Quiz 3 : <%= PrjQuiz3Score %></p>
+                        </div>
+                        <!--
+                        <div class="boxbax2">  
+                            <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0" style="width: 100%;">
+                                <p>Pre-test</p>
+                                <div class="row mb-3 ">
+                                    <div class="col-sm-10 " style="top:10px">
+                                        <b style="font-size: 12px;">Knowledge: <%= PreBasicPercent %> /40</b>
+                                        <progress class="progress" max="40" value=<%= PreBasicPercent %>  </progress>
+                                    </div>
+                                </div>
+                                <div class="row mb-3">
+                                    <div class="col-sm-10 " style="top:10px">
+                                        <b style="font-size: 12px;">Tracing: <%= PreTracePercent %> /40</b>
+                                    <progress class="progress" max="40" value=<%= PreTracePercent %>  class="html5 "></progress>
+                                    </div>
+                                </div>
+                                <div class="row mb-3">
+                                    <div class="col-sm-10 " style="top:10px">
+                                        <b style="font-size: 12px;">Explaining: <%= PreExplainPercent %> /40</b>
+                                    <progress class="progress" max="40" value=<%= PreExplainPercent, %>   class="html5 "></progress>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>  <br>-->
+                        <div class="boxbax2">  
+                            <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0" style="width: 100%;">
+                                <p>Post-test</p>
+                                <div class="row mb-3 ">
+                                    <div class="col-sm-10 " style="top:10px">
+                                        <b style="font-size: 12px;">Knowledge: <%= BasicPercent %> /40</b>
+                                        <progress class="progress" max="40" value=<%= BasicPercent %>  </progress>
+                                    </div>
+                                </div>
+                                <div class="row mb-3">
+                                    <div class="col-sm-10 " style="top:10px">
+                                        <b style="font-size: 12px;">Tracing: <%= TracePercent %> /40</b>
+                                        <progress class="progress" max="40" value=<%= TracePercent %> </progress>
+                                    </div>
+                                </div>
+                                <div class="row mb-3">
+                                    <div class="col-sm-10 " style="top:10px">
+                                        <b style="font-size: 12px;">Explaining: <%= ExplainPercent %> /40</b>
+                                        <progress class="progress" max="40" value=<%= ExplainPercent, %> </progress>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>  
                     </div>
                     <div  class="group2">
-                        <div>
-                        <h4 class="chakra-petch-regular">Total score</h4> 
-                        <div>
-                            <div class="boxbax2">  
-                                <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0" style="width: 100%;">
-                                    <p>Pre-test</p>
-                                    <div class="row mb-3 ">
-                                        <div class="col-sm-10 " style="top:10px">
-                                            <b style="font-size: 12px;">Knowledge: <%= PreBasicPercent %> /40</b>
-                                            <progress class="progress" max="40" value=<%= PreBasicPercent %>  </progress>
-                                        </div>
-                                    </div>
-                                    <div class="row mb-3">
-                                        <div class="col-sm-10 " style="top:10px">
-                                            <b style="font-size: 12px;">Tracing: <%= PreTracePercent %> /40</b>
-                                        <progress class="progress" max="40" value=<%= PreTracePercent %>  class="html5 "></progress>
-                                        </div>
-                                    </div>
-                                    <div class="row mb-3">
-                                        <div class="col-sm-10 " style="top:10px">
-                                            <b style="font-size: 12px;">Explaining: <%= PreExplainPercent %> /40</b>
-                                        <progress class="progress" max="40" value=<%= PreExplainPercent, %>   class="html5 "></progress>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>  <br>
-                            <div class="boxbax2">  
-                                <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0" style="width: 100%;">
-                                    <p>Post-test</p>
-                                    <div class="row mb-3 ">
-                                        <div class="col-sm-10 " style="top:10px">
-                                            <b style="font-size: 12px;">Knowledge: <%= BasicPercent %> /40</b>
-                                            <progress class="progress" max="40" value=<%= BasicPercent %>  </progress>
-                                        </div>
-                                    </div>
-                                    <div class="row mb-3">
-                                        <div class="col-sm-10 " style="top:10px">
-                                            <b style="font-size: 12px;">Tracing: <%= TracePercent %> /40</b>
-                                        <progress class="progress" max="40" value=<%= TracePercent %>  class="html5 "></progress>
-                                        </div>
-                                    </div>
-                                    <div class="row mb-3">
-                                        <div class="col-sm-10 " style="top:10px">
-                                            <b style="font-size: 12px;">Explaining: <%= ExplainPercent %> /40</b>
-                                        <progress class="progress" max="40" value=<%= ExplainPercent, %>   class="html5 "></progress>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>  
-                        </div>
-                        </div>
+                        <div></div>
                         <div>
                             <h4 class="chakra-petch-regular">Skill</h4>   
-                            <div style="height: 400px;" class="">
+                            <div style="height: 400px;">
                                 <div class="chartCard">
-                                    <div class="chartBox">
+                                    <div class="chartBox" style="background-color: #cad19f; border: solid #96534a;">
                                         <canvas id="myChart"></canvas>
                                     </div>
                                 </div>
@@ -254,7 +253,7 @@
                                     // setup 
                                     // [<%= PreBasicPercent %>, <%= PreTracePercent %>, <%= PreExplainPercent %>, <%= PreWritePercent %>]
                                     // [<%= BasicPercent %>, <%= TracePercent %>, <%= ExplainPercent %>, <%= WritePercent %>]
-                                    Chart.defaults.borderColor = '#36A2EB';
+                                    Chart.defaults.borderColor = '#96534a';
                                     const data = {
                                         labels: ['Knowledge', 'Tracing', 'Explaining','Writing'],
                                         datasets: [{
@@ -287,16 +286,9 @@
                                     chartVersion.innerText = Chart.version;
                                 </script>
                             </div>
-                        </div>
-                        
-                            <style>
-                                .pp{ color: #11a1c149;}
-                            </style>
-                        
-                        
+                        </div>                        
                     </div>
                 </div>
-                
             </div>
 
 
