--- a/views/student/project/project_main.ejs
+++ b/views/student/project/project_main.ejs
@@ -39,7 +39,7 @@
     <title>PROEJECT</title>
 </head>
 
-<body class="quantico-regular" style="background-color: #122c5a;">
+<body class="quantico-regular" style="background-color: #cad19f;">
     <!-- Narbar-->
     <br><br>
     <%- include('../layouts/navbar') %>
