--- a/public/stylesheets/home1.css
+++ b/public/stylesheets/home1.css
@@ -55,6 +55,10 @@ button.btn-secondary {
     display: grid;
     grid-template-columns: 80px 110px auto;
 }
+.group5 {
+    display: grid;
+    grid-template-columns: 70px 20px 110px 20px 110px;
+}
 
 
 .btn1 {
