--- a/views/index/index_teacher.ejs
+++ b/views/index/index_teacher.ejs
@@ -33,17 +33,17 @@
     <title>Home</title>
 </head>
 
-<body style="background-color: #E2D9E5;">
+<body style="background-color: #122c5a;">
     <!-- Narbar-->
     <%- include('../layouts/navbar') %>
     <!-- end of Narbar-->
 
 <br><br><br>
-    <div id = "content" class="container" style="background-color: #E2D9E5;">
-        <div class="box-skill">
+    <div id = "content" class="container" style="background-color: #122c5a;">
+        <div class="box-skill" style="background-color: #ffffff;" >
         <h1>Student Summary Skills</h1>
-        <div class="box mb-5" style="background-color: #9C7EB7;">
-            <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0" style="width: 100%;">
+        <div class="box mb-5" style="background-color: #ffffff;">
+            <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0" style="width: 100%;" >
                 
                 <div class="row mb-3 ">
                     <h5 for="inputEmail3" class="col-sm-2 col-form-label">Basic</h5>
@@ -75,10 +75,10 @@
             </div>
         </div>
         </div>
-        <h1>Ranking</h1>
-        <div class="row">
-            <div class="col-sm">
-                <div class="box  mb-5" style="background-color: #9C7EB7;">
+        <h1 >Ranking</h1>
+        <div class="row" >
+            <div class="col-sm" >
+                <div class="box  mb-5" style="background-color: #ffffff;">
                     <div lang="ja">
                         <p class="wrapbox auto">
                             <ol>
@@ -96,8 +96,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm">
-                <div class="box mb-5 " style="background-color: #9C7EB7;">
+            <div class="col-sm" >
+                <div class="box mb-5 " style="background-color: #ffffff;">
                     <div lang="ja">
                         <p class="wrapbox auto">
                             <ol>
