--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -50,6 +50,10 @@ body {
   margin-right: auto;
 }
 
+.col-sm-10 {
+  
+}
+
 /* Declare heights because of positioning of img element */
 .carousel-item {
   height: 50rem;
