edit chart teacher

--- a/views/index/index_teacher.ejs
+++ b/views/index/index_teacher.ejs
@@ -75,7 +75,7 @@
             </div>
         </div>
         </div>
-        <h1 >Ranking</h1>
+        
         <div class="row" >
             <div class="col-sm" >
                 <div class="box  mb-5" style="background-color: #ffffff;">
@@ -83,14 +83,14 @@
                         <p class="wrapbox auto">
                             <ol>
                                 <h4>แบบทดสอบที่ผู้เรียนทำคะแนนได้มากสุด</h4>
-                                <li><%= sortedCourse[0] %></li>
-                                <li><%= sortedCourse[1] %></li>
-                                <li><%= sortedCourse[2] %></li>
-                                <li><%= sortedCourse[3] %></li>
-                                <li><%= sortedCourse[4] %></li>
-                                <li><%= sortedCourse[5] %></li>
-                                <li><%= sortedCourse[6] %></li>
-                                <li><%= sortedCourse[7] %></li>
+                                <li>Algorithms and Flowcharts</li>
+                                <li>Datatype and Variable</li>
+                                <li>Input and Output</li>
+                                <li>Operators and Expressions</li>
+                                <li>Selection Statements</li>
+                                <li>Loop Statements</li>
+                                <li>Arrays and Strings</li>
+                                <li>Functions</li>
                             </ol>
                         </p>
                     </div>
