--- a/views/index/index_teacher.ejs
+++ b/views/index/index_teacher.ejs
@@ -33,20 +33,20 @@
     <title>Home</title>
 </head>
 
-<body style="background-color: #122c5a;">
+<body style="background-color: #cad19f;">
     <!-- Narbar-->
     <%- include('../layouts/navbar') %>
     <!-- end of Narbar-->
 
 <br><br><br>
-    <div id = "content" class="container" style="background-color: #122c5a;">
-        <div class="box-skill" style="background-color: #ffffff;" >
+    <div id = "content" class="container" style="background-color: #cad19f;">
+        <div class="box-skill" style="background-color: #cad19f;" >
         <h1>Student Summary Skills</h1>
-        <div class="box mb-5" style="background-color: #ffffff;">
+        <div class="box mb-5" style="background-color: #cad19f">
             <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0" style="width: 100%;" >
                 
                 <div class="row mb-3 ">
-                    <h5 for="inputEmail3" class="col-sm-2 col-form-label">Basic</h5>
+                    <h5 for="inputEmail3" class="col-sm-2 col-form-label">Knowledge</h5>
                     <div class="col-sm-10 " style="top:10px">
                         <progress  max="100" value=<%= BasicPercent %>  class="html5 "></progress>
                     </div>
@@ -78,7 +78,7 @@
         
         <div class="row" >
             <div class="col-sm" >
-                <div class="box  mb-5" style="background-color: #ffffff;">
+                <div class="box  mb-5" style="background-color: #cad19f;">
                     <div lang="ja">
                         <p class="wrapbox auto">
                             <ol>
@@ -97,7 +97,7 @@
                 </div>
             </div>
             <div class="col-sm" >
-                <div class="box mb-5 " style="background-color: #ffffff;">
+                <div class="box mb-5 " style="background-color: #cad19f">
                     <div lang="ja">
                         <p class="wrapbox auto">
                             <ol>
