--- a/public/stylesheets/chart.css
+++ b/public/stylesheets/chart.css
@@ -169,32 +169,13 @@
   }
   
   .html5::-webkit-progress-value {
-    background-image:
-    -webkit-linear-gradient( 135deg,
-                             transparent,
-                             transparent 33%,
-                             rgba(0,0,0,.1) 33%,
-                             rgba(0,0,0,.1) 66%,
-                             transparent 66%),
-      -webkit-linear-gradient( top,
-                              rgba(255, 255, 255, .25),
-                              rgba(0,0,0,.2)),
-       -webkit-linear-gradient( left, rgb(236, 16, 232), rgb(255, 255, 255));
+    background-color: #bd7b67;
+    border: solid #96534a;
   }
   
   .html5::-moz-progress-bar{
-    /* Gradient background with Stripes */
-    background-image:
-    -moz-linear-gradient( 135deg,
-                             transparent,
-                             transparent 33%,
-                             rgba(0,0,0,.1) 33%,
-                             rgba(0,0,0,.1) 66%,
-                             transparent 66%),
-      -moz-linear-gradient( top,
-                              rgba(255, 255, 255, .25),
-                              rgba(0,0,0,.2)),
-       -moz-linear-gradient( left, #09c, #f44);
+    background-color: #e2ddc8;
+    
   }
   
 
